--- a/schedule.qmd
+++ b/schedule.qmd
@@ -2,10 +2,14 @@
 title: schedule
 ---
 
-TODO: room
+<!-- last-minute-tag -->
+<!-- last-minute-2025 -->
 
-🗓 September 18, 2023 ⏰ 9:00 - 17:00\
-🏨 ✍️ [pos.it/conf](http://pos.it/conf)
+:spiral_calendar: September 16, 2025
+:alarm_clock:     09:00 - 17:00  
+:hotel:           ROOM TBD  
+:writing_hand:    [pos.it/conf](http://pos.it/conf)
+
 
 ------------------------------------------------------------------------
 
