--- a/pre-reqs.qmd
+++ b/pre-reqs.qmd
@@ -16,10 +16,12 @@ You will need:
 
 ## Install R and RStudio {#install-r-and-rstudio}
 
+<!-- last-minute-tag -->
+
 We will use:
 
--   R version \>= 4.4
--   RStudio \>= 2024.04
+-   R version == 4.5
+-   RStudio == 2025.05
 
 However, as long as you are using R \>= 4.2, and a recent version of RStudio, you should be fine.
 
@@ -34,6 +36,9 @@ install.packages(c("devtools", "tidyverse", "palmerpenguins", "here"))
 In case of any installation problems, you will also have access to a Posit Cloud hosted RStudio project.
 
 ## Discord {#discord}
+
+<!-- last-minute-tag -->
+<!-- last-minute-2025 -->
 
 During the workshop we will have experienced helpers to troubleshoot and will use Discord to enhance workshop interactions:
 
