--- a/01-functions-01.qmd
+++ b/01-functions-01.qmd
@@ -857,7 +857,9 @@ Or
 summarise(penguins, mean = mean(bill_depth_mm))
 ```
 
-rather than `$` notation
+## Tidy evaluation
+
+This is instead of having to use the full dataframe name with `$`, e.g.
 
 ``` r
 summarise(penguins, mean = mean(penguins$bill_depth_mm))
@@ -865,8 +867,8 @@ summarise(penguins, mean = mean(penguins$bill_depth_mm))
 
 . . .
 
-This is known as data-masking: the dataframe environment masks the user
-environment by giving priority to the dataframe.
+This is known as data-masking: the dataframe environment *masks* the
+user environment by giving priority to the dataframe.
 
 ## Data masking is great....
 
