--- a/04-iteration-02.qmd
+++ b/04-iteration-02.qmd
@@ -323,7 +323,7 @@ It makes **no** guarantee that the path exists.
 
 . . .
 
-However, if you move your target files (e.g. `.xlsx`), you need to modify your source.
+However, if you move target files (e.g. `.xlsx` files), you need to modify your calls to `here()`.
 
 . . .
 
@@ -854,7 +854,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
 
 What if we want lower-case names for the species?
 
-## Specify labels
+## Specify labels 🧐
 
 ```{r}
 ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
@@ -866,7 +866,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
 
 We can do it manually, but what if we get a dataset with more species?
 
-## Use a labelling function
+## Use a labelling function 😎
 
 ```{r}
 ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
